# serializer version: 1
# name: test_command[gps-admin-readonly]
  list([
    'view_company',
    'view_followupgroup',
    'view_followupgroupmembership',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_prescriberorganization',
    'view_jobseekerprofile',
    'export_cta',
    'view_user',
  ])
# ---
# name: test_command[gps-admin]
  list([
    'view_company',
    'add_followupgroup',
    'change_followupgroup',
    'delete_followupgroup',
    'view_followupgroup',
    'add_followupgroupmembership',
    'change_followupgroupmembership',
    'delete_followupgroupmembership',
    'view_followupgroupmembership',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_prescriberorganization',
    'change_jobseekerprofile',
    'view_jobseekerprofile',
    'add_user',
    'change_user',
    'export_cta',
    'hijack',
    'view_user',
  ])
# ---
# name: test_command[itou-admin-readonly]
  list([
    'view_emailaddress',
    'view_datum',
    'view_approval',
    'view_cancelledapproval',
    'view_prolongation',
    'view_prolongationrequest',
    'view_suspension',
    'view_commune',
    'view_country',
    'view_department',
    'view_city',
    'view_announcementcampaign',
    'view_announcementitem',
    'view_company',
    'view_companymembership',
    'view_jobdescription',
    'view_siaeaciconvergencephc',
    'view_siaeconvention',
    'view_siaefinancialannex',
    'view_administrativecriteria',
    'view_eligibilitydiagnosis',
    'view_geiqadministrativecriteria',
    'view_geiqeligibilitydiagnosis',
    'view_geiqselectedadministrativecriteria',
    'view_selectedadministrativecriteria',
    'view_email',
    'view_employeerecord',
    'view_employeerecordtransitionlog',
    'view_employeerecordupdatenotification',
    'view_externaldataimport',
    'view_file',
    'view_assessment',
    'view_assessmentcampaign',
    'view_employee',
    'view_employeecontract',
    'view_employeeprequalification',
    'view_followupgroup',
    'view_followupgroupmembership',
    'view_institution',
    'view_institutionmembership',
    'view_employerinvitation',
    'view_laborinspectorinvitation',
    'view_prescriberwithorginvitation',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_appellation',
    'view_rome',
    'view_prescribermembership',
    'view_prescriberorganization',
    'view_calendar',
    'view_evaluatedadministrativecriteria',
    'view_evaluatedjobapplication',
    'view_evaluatedsiae',
    'view_evaluationcampaign',
    'view_sanctions',
    'view_jobseekerprofile',
    'view_nirmodificationrequest',
    'export_cta',
    'view_user',
    'view_pksupportremark',
    'view_uuidsupportremark',
  ])
# ---
# name: test_command[itou-admin]
  list([
    'add_emailaddress',
    'change_emailaddress',
    'delete_emailaddress',
    'view_emailaddress',
    'view_datum',
    'change_approval',
    'delete_approval',
    'export_ft_api_rejections',
    'handle_manual_approval_requests',
    'view_approval',
    'view_cancelledapproval',
    'add_prolongation',
    'change_prolongation',
    'delete_prolongation',
    'view_prolongation',
    'delete_prolongationrequest',
    'view_prolongationrequest',
    'add_suspension',
    'change_suspension',
    'delete_suspension',
    'view_suspension',
    'view_commune',
    'view_country',
    'view_department',
    'view_city',
    'add_announcementcampaign',
    'change_announcementcampaign',
    'delete_announcementcampaign',
    'view_announcementcampaign',
    'add_announcementitem',
    'change_announcementitem',
    'delete_announcementitem',
    'view_announcementitem',
    'add_company',
    'change_company',
    'delete_company',
    'import_aci_convergence_phc',
    'view_company',
    'add_companymembership',
    'change_companymembership',
    'view_companymembership',
    'delete_jobdescription',
    'view_jobdescription',
    'view_siaeaciconvergencephc',
    'change_siaeconvention',
    'view_siaeconvention',
    'view_siaefinancialannex',
    'view_administrativecriteria',
    'add_eligibilitydiagnosis',
    'change_eligibilitydiagnosis',
    'delete_eligibilitydiagnosis',
    'view_eligibilitydiagnosis',
    'view_geiqadministrativecriteria',
    'add_geiqeligibilitydiagnosis',
    'change_geiqeligibilitydiagnosis',
    'delete_geiqeligibilitydiagnosis',
    'view_geiqeligibilitydiagnosis',
    'add_geiqselectedadministrativecriteria',
    'change_geiqselectedadministrativecriteria',
    'delete_geiqselectedadministrativecriteria',
    'view_geiqselectedadministrativecriteria',
    'add_selectedadministrativecriteria',
    'change_selectedadministrativecriteria',
    'delete_selectedadministrativecriteria',
    'view_selectedadministrativecriteria',
    'view_email',
    'change_employeerecord',
    'delete_employeerecord',
    'view_employeerecord',
    'view_employeerecordtransitionlog',
    'view_employeerecordupdatenotification',
    'delete_externaldataimport',
    'view_externaldataimport',
    'view_file',
    'view_assessment',
    'add_assessmentcampaign',
    'change_assessmentcampaign',
    'view_assessmentcampaign',
    'view_employee',
    'view_employeecontract',
    'view_employeeprequalification',
    'delete_followupgroup',
    'view_followupgroup',
    'delete_followupgroupmembership',
    'view_followupgroupmembership',
    'add_institution',
    'change_institution',
    'view_institution',
    'add_institutionmembership',
    'change_institutionmembership',
    'view_institutionmembership',
    'change_employerinvitation',
    'delete_employerinvitation',
    'view_employerinvitation',
    'change_laborinspectorinvitation',
    'delete_laborinspectorinvitation',
    'view_laborinspectorinvitation',
    'change_prescriberwithorginvitation',
    'delete_prescriberwithorginvitation',
    'view_prescriberwithorginvitation',
    'add_jobapplication',
    'change_jobapplication',
    'delete_jobapplication',
    'export_job_applications_unknown_to_ft',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_appellation',
    'view_rome',
    'add_prescribermembership',
    'change_prescribermembership',
    'view_prescribermembership',
    'add_prescriberorganization',
    'change_prescriberorganization',
    'delete_prescriberorganization',
    'view_prescriberorganization',
    'view_calendar',
    'view_evaluatedadministrativecriteria',
    'view_evaluatedjobapplication',
    'view_evaluatedsiae',
    'view_evaluationcampaign',
    'view_sanctions',
    'change_jobseekerprofile',
    'delete_jobseekerprofile',
    'view_jobseekerprofile',
    'change_nirmodificationrequest',
    'delete_nirmodificationrequest',
    'view_nirmodificationrequest',
    'add_user',
    'change_user',
    'delete_user',
    'export_cta',
    'hijack',
    'merge_users',
    'view_user',
    'add_pksupportremark',
    'change_pksupportremark',
    'view_pksupportremark',
    'add_uuidsupportremark',
    'change_uuidsupportremark',
    'view_uuidsupportremark',
  ])
# ---
# name: test_command[itou-siae-evaluations]
  list([
    'add_calendar',
    'change_calendar',
    'delete_calendar',
    'view_calendar',
    'add_evaluatedadministrativecriteria',
    'change_evaluatedadministrativecriteria',
    'delete_evaluatedadministrativecriteria',
    'view_evaluatedadministrativecriteria',
    'add_evaluatedjobapplication',
    'change_evaluatedjobapplication',
    'delete_evaluatedjobapplication',
    'view_evaluatedjobapplication',
    'add_evaluatedsiae',
    'change_evaluatedsiae',
    'delete_evaluatedsiae',
    'view_evaluatedsiae',
    'add_evaluationcampaign',
    'change_evaluationcampaign',
    'delete_evaluationcampaign',
    'view_evaluationcampaign',
    'add_sanctions',
    'change_sanctions',
    'delete_sanctions',
    'view_sanctions',
  ])
# ---
# name: test_command[logs]
  list([
    'group name=gps-admin created',
    'group name=gps-admin, permission add_followupgroup added',
    'group name=gps-admin, permission add_followupgroupmembership added',
    'group name=gps-admin, permission add_user added',
    'group name=gps-admin, permission change_followupgroup added',
    'group name=gps-admin, permission change_followupgroupmembership added',
    'group name=gps-admin, permission change_jobseekerprofile added',
    'group name=gps-admin, permission change_user added',
    'group name=gps-admin, permission delete_followupgroup added',
    'group name=gps-admin, permission delete_followupgroupmembership added',
    'group name=gps-admin, permission export_cta added',
    'group name=gps-admin, permission hijack added',
    'group name=gps-admin, permission view_company added',
    'group name=gps-admin, permission view_followupgroup added',
    'group name=gps-admin, permission view_followupgroupmembership added',
    'group name=gps-admin, permission view_jobapplication added',
    'group name=gps-admin, permission view_jobapplicationtransitionlog added',
    'group name=gps-admin, permission view_jobseekerprofile added',
    'group name=gps-admin, permission view_prescriberorganization added',
    'group name=gps-admin, permission view_user added',
    'group name=gps-admin-readonly created',
    'group name=gps-admin-readonly, permission export_cta added',
    'group name=gps-admin-readonly, permission view_company added',
    'group name=gps-admin-readonly, permission view_followupgroup added',
    'group name=gps-admin-readonly, permission view_followupgroupmembership added',
    'group name=gps-admin-readonly, permission view_jobapplication added',
    'group name=gps-admin-readonly, permission view_jobapplicationtransitionlog added',
    'group name=gps-admin-readonly, permission view_jobseekerprofile added',
    'group name=gps-admin-readonly, permission view_prescriberorganization added',
    'group name=gps-admin-readonly, permission view_user added',
    'group name=itou-admin created',
    'group name=itou-admin, permission add_announcementcampaign added',
    'group name=itou-admin, permission add_announcementitem added',
    'group name=itou-admin, permission add_assessmentcampaign added',
    'group name=itou-admin, permission add_company added',
    'group name=itou-admin, permission add_companymembership added',
    'group name=itou-admin, permission add_eligibilitydiagnosis added',
    'group name=itou-admin, permission add_emailaddress added',
    'group name=itou-admin, permission add_geiqeligibilitydiagnosis added',
    'group name=itou-admin, permission add_geiqselectedadministrativecriteria added',
    'group name=itou-admin, permission add_institution added',
    'group name=itou-admin, permission add_institutionmembership added',
    'group name=itou-admin, permission add_jobapplication added',
    'group name=itou-admin, permission add_pksupportremark added',
    'group name=itou-admin, permission add_prescribermembership added',
    'group name=itou-admin, permission add_prescriberorganization added',
    'group name=itou-admin, permission add_prolongation added',
    'group name=itou-admin, permission add_selectedadministrativecriteria added',
    'group name=itou-admin, permission add_suspension added',
    'group name=itou-admin, permission add_user added',
    'group name=itou-admin, permission add_uuidsupportremark added',
    'group name=itou-admin, permission change_announcementcampaign added',
    'group name=itou-admin, permission change_announcementitem added',
    'group name=itou-admin, permission change_approval added',
    'group name=itou-admin, permission change_assessmentcampaign added',
    'group name=itou-admin, permission change_company added',
    'group name=itou-admin, permission change_companymembership added',
    'group name=itou-admin, permission change_eligibilitydiagnosis added',
    'group name=itou-admin, permission change_emailaddress added',
    'group name=itou-admin, permission change_employeerecord added',
    'group name=itou-admin, permission change_employerinvitation added',
    'group name=itou-admin, permission change_geiqeligibilitydiagnosis added',
    'group name=itou-admin, permission change_geiqselectedadministrativecriteria added',
    'group name=itou-admin, permission change_institution added',
    'group name=itou-admin, permission change_institutionmembership added',
    'group name=itou-admin, permission change_jobapplication added',
    'group name=itou-admin, permission change_jobseekerprofile added',
    'group name=itou-admin, permission change_laborinspectorinvitation added',
    'group name=itou-admin, permission change_nirmodificationrequest added',
    'group name=itou-admin, permission change_pksupportremark added',
    'group name=itou-admin, permission change_prescribermembership added',
    'group name=itou-admin, permission change_prescriberorganization added',
    'group name=itou-admin, permission change_prescriberwithorginvitation added',
    'group name=itou-admin, permission change_prolongation added',
    'group name=itou-admin, permission change_selectedadministrativecriteria added',
    'group name=itou-admin, permission change_siaeconvention added',
    'group name=itou-admin, permission change_suspension added',
    'group name=itou-admin, permission change_user added',
    'group name=itou-admin, permission change_uuidsupportremark added',
    'group name=itou-admin, permission delete_announcementcampaign added',
    'group name=itou-admin, permission delete_announcementitem added',
    'group name=itou-admin, permission delete_approval added',
    'group name=itou-admin, permission delete_company added',
    'group name=itou-admin, permission delete_eligibilitydiagnosis added',
    'group name=itou-admin, permission delete_emailaddress added',
    'group name=itou-admin, permission delete_employeerecord added',
    'group name=itou-admin, permission delete_employerinvitation added',
    'group name=itou-admin, permission delete_externaldataimport added',
    'group name=itou-admin, permission delete_followupgroup added',
    'group name=itou-admin, permission delete_followupgroupmembership added',
    'group name=itou-admin, permission delete_geiqeligibilitydiagnosis added',
    'group name=itou-admin, permission delete_geiqselectedadministrativecriteria added',
    'group name=itou-admin, permission delete_jobapplication added',
    'group name=itou-admin, permission delete_jobdescription added',
    'group name=itou-admin, permission delete_jobseekerprofile added',
    'group name=itou-admin, permission delete_laborinspectorinvitation added',
    'group name=itou-admin, permission delete_nirmodificationrequest added',
    'group name=itou-admin, permission delete_prescriberorganization added',
    'group name=itou-admin, permission delete_prescriberwithorginvitation added',
    'group name=itou-admin, permission delete_prolongation added',
    'group name=itou-admin, permission delete_prolongationrequest added',
    'group name=itou-admin, permission delete_selectedadministrativecriteria added',
    'group name=itou-admin, permission delete_suspension added',
    'group name=itou-admin, permission delete_user added',
    'group name=itou-admin, permission export_cta added',
    'group name=itou-admin, permission export_ft_api_rejections added',
    'group name=itou-admin, permission export_job_applications_unknown_to_ft added',
    'group name=itou-admin, permission handle_manual_approval_requests added',
    'group name=itou-admin, permission hijack added',
    'group name=itou-admin, permission import_aci_convergence_phc added',
    'group name=itou-admin, permission merge_users added',
    'group name=itou-admin, permission view_administrativecriteria added',
    'group name=itou-admin, permission view_announcementcampaign added',
    'group name=itou-admin, permission view_announcementitem added',
    'group name=itou-admin, permission view_appellation added',
    'group name=itou-admin, permission view_approval added',
    'group name=itou-admin, permission view_assessment added',
    'group name=itou-admin, permission view_assessmentcampaign added',
    'group name=itou-admin, permission view_calendar added',
    'group name=itou-admin, permission view_cancelledapproval added',
    'group name=itou-admin, permission view_city added',
    'group name=itou-admin, permission view_commune added',
    'group name=itou-admin, permission view_company added',
    'group name=itou-admin, permission view_companymembership added',
    'group name=itou-admin, permission view_country added',
    'group name=itou-admin, permission view_datum added',
    'group name=itou-admin, permission view_department added',
    'group name=itou-admin, permission view_eligibilitydiagnosis added',
    'group name=itou-admin, permission view_email added',
    'group name=itou-admin, permission view_emailaddress added',
    'group name=itou-admin, permission view_employee added',
    'group name=itou-admin, permission view_employeecontract added',
    'group name=itou-admin, permission view_employeeprequalification added',
    'group name=itou-admin, permission view_employeerecord added',
    'group name=itou-admin, permission view_employeerecordtransitionlog added',
    'group name=itou-admin, permission view_employeerecordupdatenotification added',
    'group name=itou-admin, permission view_employerinvitation added',
    'group name=itou-admin, permission view_evaluatedadministrativecriteria added',
    'group name=itou-admin, permission view_evaluatedjobapplication added',
    'group name=itou-admin, permission view_evaluatedsiae added',
    'group name=itou-admin, permission view_evaluationcampaign added',
    'group name=itou-admin, permission view_externaldataimport added',
    'group name=itou-admin, permission view_file added',
    'group name=itou-admin, permission view_followupgroup added',
    'group name=itou-admin, permission view_followupgroupmembership added',
    'group name=itou-admin, permission view_geiqadministrativecriteria added',
    'group name=itou-admin, permission view_geiqeligibilitydiagnosis added',
    'group name=itou-admin, permission view_geiqselectedadministrativecriteria added',
    'group name=itou-admin, permission view_institution added',
    'group name=itou-admin, permission view_institutionmembership added',
    'group name=itou-admin, permission view_jobapplication added',
    'group name=itou-admin, permission view_jobapplicationtransitionlog added',
    'group name=itou-admin, permission view_jobdescription added',
    'group name=itou-admin, permission view_jobseekerprofile added',
    'group name=itou-admin, permission view_laborinspectorinvitation added',
    'group name=itou-admin, permission view_nirmodificationrequest added',
    'group name=itou-admin, permission view_pksupportremark added',
    'group name=itou-admin, permission view_prescribermembership added',
    'group name=itou-admin, permission view_prescriberorganization added',
    'group name=itou-admin, permission view_prescriberwithorginvitation added',
    'group name=itou-admin, permission view_prolongation added',
    'group name=itou-admin, permission view_prolongationrequest added',
    'group name=itou-admin, permission view_rome added',
    'group name=itou-admin, permission view_sanctions added',
    'group name=itou-admin, permission view_selectedadministrativecriteria added',
    'group name=itou-admin, permission view_siaeaciconvergencephc added',
    'group name=itou-admin, permission view_siaeconvention added',
    'group name=itou-admin, permission view_siaefinancialannex added',
    'group name=itou-admin, permission view_suspension added',
    'group name=itou-admin, permission view_user added',
    'group name=itou-admin, permission view_uuidsupportremark added',
    'group name=itou-admin-readonly created',
    'group name=itou-admin-readonly, permission export_cta added',
    'group name=itou-admin-readonly, permission view_administrativecriteria added',
    'group name=itou-admin-readonly, permission view_announcementcampaign added',
    'group name=itou-admin-readonly, permission view_announcementitem added',
    'group name=itou-admin-readonly, permission view_appellation added',
    'group name=itou-admin-readonly, permission view_approval added',
    'group name=itou-admin-readonly, permission view_assessment added',
    'group name=itou-admin-readonly, permission view_assessmentcampaign added',
    'group name=itou-admin-readonly, permission view_calendar added',
    'group name=itou-admin-readonly, permission view_cancelledapproval added',
    'group name=itou-admin-readonly, permission view_city added',
    'group name=itou-admin-readonly, permission view_commune added',
    'group name=itou-admin-readonly, permission view_company added',
    'group name=itou-admin-readonly, permission view_companymembership added',
    'group name=itou-admin-readonly, permission view_country added',
    'group name=itou-admin-readonly, permission view_datum added',
    'group name=itou-admin-readonly, permission view_department added',
    'group name=itou-admin-readonly, permission view_eligibilitydiagnosis added',
    'group name=itou-admin-readonly, permission view_email added',
    'group name=itou-admin-readonly, permission view_emailaddress added',
    'group name=itou-admin-readonly, permission view_employee added',
    'group name=itou-admin-readonly, permission view_employeecontract added',
    'group name=itou-admin-readonly, permission view_employeeprequalification added',
    'group name=itou-admin-readonly, permission view_employeerecord added',
    'group name=itou-admin-readonly, permission view_employeerecordtransitionlog added',
    'group name=itou-admin-readonly, permission view_employeerecordupdatenotification added',
    'group name=itou-admin-readonly, permission view_employerinvitation added',
    'group name=itou-admin-readonly, permission view_evaluatedadministrativecriteria added',
    'group name=itou-admin-readonly, permission view_evaluatedjobapplication added',
    'group name=itou-admin-readonly, permission view_evaluatedsiae added',
    'group name=itou-admin-readonly, permission view_evaluationcampaign added',
    'group name=itou-admin-readonly, permission view_externaldataimport added',
    'group name=itou-admin-readonly, permission view_file added',
    'group name=itou-admin-readonly, permission view_followupgroup added',
    'group name=itou-admin-readonly, permission view_followupgroupmembership added',
    'group name=itou-admin-readonly, permission view_geiqadministrativecriteria added',
    'group name=itou-admin-readonly, permission view_geiqeligibilitydiagnosis added',
    'group name=itou-admin-readonly, permission view_geiqselectedadministrativecriteria added',
    'group name=itou-admin-readonly, permission view_institution added',
    'group name=itou-admin-readonly, permission view_institutionmembership added',
    'group name=itou-admin-readonly, permission view_jobapplication added',
    'group name=itou-admin-readonly, permission view_jobapplicationtransitionlog added',
    'group name=itou-admin-readonly, permission view_jobdescription added',
    'group name=itou-admin-readonly, permission view_jobseekerprofile added',
    'group name=itou-admin-readonly, permission view_laborinspectorinvitation added',
    'group name=itou-admin-readonly, permission view_nirmodificationrequest added',
    'group name=itou-admin-readonly, permission view_pksupportremark added',
    'group name=itou-admin-readonly, permission view_prescribermembership added',
    'group name=itou-admin-readonly, permission view_prescriberorganization added',
    'group name=itou-admin-readonly, permission view_prescriberwithorginvitation added',
    'group name=itou-admin-readonly, permission view_prolongation added',
    'group name=itou-admin-readonly, permission view_prolongationrequest added',
    'group name=itou-admin-readonly, permission view_rome added',
    'group name=itou-admin-readonly, permission view_sanctions added',
    'group name=itou-admin-readonly, permission view_selectedadministrativecriteria added',
    'group name=itou-admin-readonly, permission view_siaeaciconvergencephc added',
    'group name=itou-admin-readonly, permission view_siaeconvention added',
    'group name=itou-admin-readonly, permission view_siaefinancialannex added',
    'group name=itou-admin-readonly, permission view_suspension added',
    'group name=itou-admin-readonly, permission view_user added',
    'group name=itou-admin-readonly, permission view_uuidsupportremark added',
    'group name=itou-siae-evaluations created',
    'group name=itou-siae-evaluations, permission add_calendar added',
    'group name=itou-siae-evaluations, permission add_evaluatedadministrativecriteria added',
    'group name=itou-siae-evaluations, permission add_evaluatedjobapplication added',
    'group name=itou-siae-evaluations, permission add_evaluatedsiae added',
    'group name=itou-siae-evaluations, permission add_evaluationcampaign added',
    'group name=itou-siae-evaluations, permission add_sanctions added',
    'group name=itou-siae-evaluations, permission change_calendar added',
    'group name=itou-siae-evaluations, permission change_evaluatedadministrativecriteria added',
    'group name=itou-siae-evaluations, permission change_evaluatedjobapplication added',
    'group name=itou-siae-evaluations, permission change_evaluatedsiae added',
    'group name=itou-siae-evaluations, permission change_evaluationcampaign added',
    'group name=itou-siae-evaluations, permission change_sanctions added',
    'group name=itou-siae-evaluations, permission delete_calendar added',
    'group name=itou-siae-evaluations, permission delete_evaluatedadministrativecriteria added',
    'group name=itou-siae-evaluations, permission delete_evaluatedjobapplication added',
    'group name=itou-siae-evaluations, permission delete_evaluatedsiae added',
    'group name=itou-siae-evaluations, permission delete_evaluationcampaign added',
    'group name=itou-siae-evaluations, permission delete_sanctions added',
    'group name=itou-siae-evaluations, permission view_calendar added',
    'group name=itou-siae-evaluations, permission view_evaluatedadministrativecriteria added',
    'group name=itou-siae-evaluations, permission view_evaluatedjobapplication added',
    'group name=itou-siae-evaluations, permission view_evaluatedsiae added',
    'group name=itou-siae-evaluations, permission view_evaluationcampaign added',
    'group name=itou-siae-evaluations, permission view_sanctions added',
    'group name=pilotage-admin created',
    'group name=pilotage-admin, permission add_institution added',
    'group name=pilotage-admin, permission add_institutionmembership added',
    'group name=pilotage-admin, permission change_institution added',
    'group name=pilotage-admin, permission change_institutionmembership added',
    'group name=pilotage-admin, permission export_cta added',
    'group name=pilotage-admin, permission hijack added',
    'group name=pilotage-admin, permission view_approval added',
    'group name=pilotage-admin, permission view_cancelledapproval added',
    'group name=pilotage-admin, permission view_company added',
    'group name=pilotage-admin, permission view_companymembership added',
    'group name=pilotage-admin, permission view_institution added',
    'group name=pilotage-admin, permission view_institutionmembership added',
    'group name=pilotage-admin, permission view_jobapplication added',
    'group name=pilotage-admin, permission view_jobapplicationtransitionlog added',
    'group name=pilotage-admin, permission view_prescribermembership added',
    'group name=pilotage-admin, permission view_prescriberorganization added',
    'group name=pilotage-admin, permission view_prolongation added',
    'group name=pilotage-admin, permission view_siaeaciconvergencephc added',
    'group name=pilotage-admin, permission view_statsdashboardvisit added',
    'group name=pilotage-admin, permission view_suspension added',
    'group name=pilotage-admin, permission view_user added',
    'group name=pilotage-admin-readonly created',
    'group name=pilotage-admin-readonly, permission export_cta added',
    'group name=pilotage-admin-readonly, permission view_approval added',
    'group name=pilotage-admin-readonly, permission view_cancelledapproval added',
    'group name=pilotage-admin-readonly, permission view_company added',
    'group name=pilotage-admin-readonly, permission view_companymembership added',
    'group name=pilotage-admin-readonly, permission view_institution added',
    'group name=pilotage-admin-readonly, permission view_institutionmembership added',
    'group name=pilotage-admin-readonly, permission view_jobapplication added',
    'group name=pilotage-admin-readonly, permission view_jobapplicationtransitionlog added',
    'group name=pilotage-admin-readonly, permission view_prescribermembership added',
    'group name=pilotage-admin-readonly, permission view_prescriberorganization added',
    'group name=pilotage-admin-readonly, permission view_prolongation added',
    'group name=pilotage-admin-readonly, permission view_siaeaciconvergencephc added',
    'group name=pilotage-admin-readonly, permission view_statsdashboardvisit added',
    'group name=pilotage-admin-readonly, permission view_suspension added',
    'group name=pilotage-admin-readonly, permission view_user added',
    'group name=rdvi created',
    'group name=rdvi, permission view_company added',
    'group name=rdvi, permission view_companymembership added',
    'group name=rdvi, permission view_user added',
    'All done!',
  ])
# ---
# name: test_command[pilotage-admin-readonly]
  list([
    'view_statsdashboardvisit',
    'view_approval',
    'view_cancelledapproval',
    'view_prolongation',
    'view_suspension',
    'view_company',
    'view_companymembership',
    'view_siaeaciconvergencephc',
    'view_institution',
    'view_institutionmembership',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_prescribermembership',
    'view_prescriberorganization',
    'export_cta',
    'view_user',
  ])
# ---
# name: test_command[pilotage-admin]
  list([
    'view_statsdashboardvisit',
    'view_approval',
    'view_cancelledapproval',
    'view_prolongation',
    'view_suspension',
    'view_company',
    'view_companymembership',
    'view_siaeaciconvergencephc',
    'add_institution',
    'change_institution',
    'view_institution',
    'add_institutionmembership',
    'change_institutionmembership',
    'view_institutionmembership',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_prescribermembership',
    'view_prescriberorganization',
    'export_cta',
    'hijack',
    'view_user',
  ])
# ---
# name: test_command[rdvi]
  list([
    'view_company',
    'view_companymembership',
    'view_user',
  ])
# ---
